# odas

./: CMakeLists.txt  armlinux.cmake  armrun.sh  memcheck.sh  run.sh
armbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  demo  odaslive  odastest
demo/: demo.c  main_stream.c
demo/odaslive/: parameters.c  parameters.h  threads.c  threads.h
extral_files/audio-8ch-32k-14m_sep-4ch-16k_pf-4ch-16k/: ReSpeaker.cfg
extral_files/test_data/: 4mic_simu.cfg  wav_4mic_simulate.pcm
include/odas/source/: src_hops.h
src/module/: mod_volume.c
src/source/: src_hops.c
